--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h1>Sudoku Solver</h1>
+        <div class="message"></div>
 
         <div class="difficulty-buttons">
             <button id="easy">Easy</button>
